--- a/Model Training.ipynb
+++ b/Model Training.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "23ba6a74-1033-44ad-ac91-930843f720db",
    "metadata": {
     "tags": []
@@ -39,10 +39,20 @@
     "import numpy as np\n",
     "import time\n",
     "\n",
+    "###### download the data we need\n",
+    "# !cd ~/INM706-image-captioning/Datasets/coco/images/\n",
+    "# !wget http://images.cocodataset.org/zips/train2017.zip\n",
+    "# !wget http://images.cocodataset.org/zips/val2017.zip\n",
+    "# !unzip train2017.zip\n",
+    "# !unzip val2017.zip\n",
+    "# !rm train2017.zip\n",
+    "# !rm val2017.zip\n",
+    "\n",
     "###### run code below if nltk hasn't been set up in clound instance yet\n",
     "# !python -m nltk.downloader -d /usr/local/share/nltk_data all\n",
     "\n",
     "###### run code below to save pre-trained weights if needed\n",
+    "# cd ~/INM706-image-captioning/model\n",
     "# !wget https://download.pytorch.org/models/resnet152-394f9c45.pth\n",
     "# !mv resnet152-394f9c45.pth resnet152_model.pth"
    ]
@@ -57,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "2472cfa6",
    "metadata": {},
    "outputs": [
@@ -67,7 +77,7 @@
        "\"\\n# load vocab\\nwith open('vocabulary/idx_to_string.json') as json_file:\\n    idx_to_string_json = json.load(json_file)\\n        \\nidx_to_string = dict()\\nfor key in idx_to_string_json:\\n    idx_to_string[int(key)] = idx_to_string_json[key]\\n    \\nwith open('vocabulary/string_to_index.json') as json_file:\\n    string_to_index = json.load(json_file)\\n\""
       ]
      },
-     "execution_count": 16,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "ab72e6eb",
    "metadata": {},
    "outputs": [],
@@ -124,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "8143132d",
    "metadata": {},
    "outputs": [],
@@ -134,7 +144,7 @@
     "    'captions_path': train_captions_path,\n",
     "    'freq_threshold': 5,\n",
     "    'sequence_length': 20,\n",
-    "    'caps_per_img': 1,\n",
+    "    'caps_per_img': 2,\n",
     "    'stage': \"train\",\n",
     "    'idx_to_string': None,\n",
     "    'string_to_index': None,\n",
@@ -145,7 +155,7 @@
     "    'captions_path': val_captions_path,\n",
     "    'freq_threshold': 5,\n",
     "    'sequence_length': 20,\n",
-    "    'caps_per_img': 1,\n",
+    "    'caps_per_img': 2,\n",
     "    'stage': \"validation\",\n",
     "    'idx_to_string': None,\n",
     "    'string_to_index': None,\n",
@@ -156,7 +166,7 @@
     "    'captions_path': test_captions_path,\n",
     "    'freq_threshold': 5,\n",
     "    'sequence_length': 20,\n",
-    "    'caps_per_img': 1,\n",
+    "    'caps_per_img': 2,\n",
     "    'stage': \"test\",\n",
     "    'idx_to_string': None,\n",
     "    'string_to_index': None,\n",
@@ -175,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "f38c73a0",
    "metadata": {},
    "outputs": [
@@ -183,8 +193,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lenght of training image: 500, Lenght of Validation image: 100 Lenght of Testing image: 4939\n",
-      "Lenght of vocabulary: 619\n"
+      "Lenght of training image: 30000, Lenght of Validation image: 6000 Lenght of Testing image: 9904\n",
+      "Lenght of vocabulary: 4105\n"
      ]
     }
    ],
@@ -197,12 +207,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "8237cb08",
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 1\n",
+    "batch_size = 64\n",
     "train_loader = data.DataLoader(coco_interface_train, batch_size=batch_size, shuffle=True)\n",
     "val_loader = data.DataLoader(coco_interface_val, batch_size=batch_size, shuffle=False)\n",
     "test_loader = data.DataLoader(coco_interface_test, batch_size=batch_size, shuffle=False)"
@@ -218,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "id": "46e041f3",
    "metadata": {},
    "outputs": [],
@@ -239,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "7fc0b62d",
    "metadata": {},
    "outputs": [
@@ -259,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "8f6a4973",
    "metadata": {},
    "outputs": [],
@@ -285,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "14c8e3e8",
    "metadata": {},
    "outputs": [],
@@ -312,20 +322,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "de69f6e6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "./model/image_captioning_model_v1.pth file does not exist, training startging from scratch\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "CHECKPOINT = './model/image_captioning_model_v1.pth'\n",
+    "CHECKPOINT = './model/image_captioning_model_v2.pth'\n",
     "if Path(CHECKPOINT).exists():\n",
     "    encoder, decoder, training_loss, validation_loss = load_model(encoder, decoder, CHECKPOINT)\n",
     "else:\n",
@@ -334,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "id": "67994682",
    "metadata": {},
    "outputs": [],
@@ -384,15 +386,15 @@
     "        encoder.eval()\n",
     "        decoder.eval()\n",
     "        \n",
-    "        for id, batch in enumerate(val_loader):\n",
+    "        for i, batch in enumerate(val_loader):\n",
     "            idx, images, captions = batch\n",
     "            images, captions = images.to(device), captions.to(device)\n",
     "            features = encoder(images)\n",
     "            outputs = decoder(features, captions)\n",
     "            loss = criterion(outputs.view(-1, vocab_size), captions.contiguous().view(-1))\n",
     "            val_epoch_loss += loss.item()\n",
-    "            if id % 100 == 0:\n",
-    "                print('Validation: ', id, ' ', loss.item())\n",
+    "            if i % 100 == 0:\n",
+    "                print('Validation: ', i, ' ', loss.item())\n",
     "            \n",
     "        val_epoch_loss /= len(val_loader)\n",
     "        validation_loss.append(val_epoch_loss)\n",
@@ -418,40 +420,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training:  0   4.385537147521973\n",
-      "Training:  100   2.824275255203247\n",
-      "Training:  200   4.237329483032227\n",
-      "Training:  300   4.2739362716674805\n",
-      "Training:  400   3.1215097904205322\n",
-      "Validation:  0   3.4859657287597656\n",
-      "Epoch: 0. Training Loss = 3.4319, Training Perplexity: 30.9363. Validation Loss: 4.3009, Validation Perplexity: 73.7627. Time: 0.593844\n",
-      "Training:  0   3.7339859008789062\n",
-      "Training:  100   4.200594425201416\n",
-      "Training:  200   3.744450092315674\n",
-      "Training:  300   3.726269483566284\n",
-      "Training:  400   3.8239715099334717\n",
-      "Validation:  0   3.493844985961914\n",
-      "Epoch: 1. Training Loss = 3.3969, Training Perplexity: 29.8704. Validation Loss: 4.3056, Validation Perplexity: 74.1118. Time: 1.006393\n",
-      "Training:  0   3.647059440612793\n",
-      "Training:  100   3.0379064083099365\n",
-      "Training:  200   2.3731160163879395\n",
-      "Training:  300   3.128211259841919\n",
-      "Training:  400   2.9506795406341553\n",
-      "Validation:  0   3.4830162525177\n",
-      "Epoch: 2. Training Loss = 3.3635, Training Perplexity: 28.8893. Validation Loss: 4.3214, Validation Perplexity: 75.2946. Time: 1.419526\n",
-      "Training:  0   3.3759496212005615\n",
-      "Training:  100   3.136727809906006\n",
-      "Training:  200   3.489413022994995\n",
-      "Training:  300   2.116215944290161\n",
-      "Training:  400   3.9824142456054688\n",
-      "Validation:  0   3.471137285232544\n",
-      "Epoch: 3. Training Loss = 3.3316, Training Perplexity: 27.9845. Validation Loss: 4.3313, Validation Perplexity: 76.0433. Time: 1.832341\n",
-      "Training:  0   3.3340795040130615\n",
-      "Training:  100   2.0259642601013184\n",
-      "Training:  200   3.963111639022827\n",
-      "Training:  300   3.768460988998413\n",
-      "Training:  400   4.201425552368164\n",
-      "Validation:  0   3.481130361557007\n"
+      "Training:  0   4.109623432159424\n",
+      "Training:  100   4.257630825042725\n",
+      "Training:  200   4.3339409828186035\n",
+      "Training:  300   4.287081718444824\n",
+      "Training:  400   4.227653980255127\n",
+      "Validation:  0   5.282161712646484\n",
+      "Epoch: 0. Training Loss = 4.2691, Training Perplexity: 71.4599. Validation Loss: 5.5728, Validation Perplexity: 263.1811. Time: 13.153914\n",
+      "Training:  0   4.2040581703186035\n",
+      "Training:  100   4.230066299438477\n",
+      "Training:  200   4.175968170166016\n",
+      "Training:  300   4.188327312469482\n"
      ]
     }
    ],
@@ -463,8 +442,8 @@
     "    'optimizer': optimizer,\n",
     "    'train_loader': train_loader,\n",
     "    'val_loader': val_loader,\n",
-    "    'total_epoch': 10,\n",
-    "    'checkpoint_path': './model/image_captioning_model_v0.pth'\n",
+    "    'total_epoch': 100,\n",
+    "    'checkpoint_path': CHECKPOINT\n",
     "}\n",
     "\n",
     "training_loss, validation_loss = train(**train_params) "
