added utils file to create vocab and smaller test set

--- a/Model Training.ipynb
+++ b/Model Training.ipynb
@@ -35,6 +35,7 @@
     "\n",
     "from pathlib import Path\n",
     "from DatasetInterface import MSCOCOInterface\n",
+    "from utils import *\n",
     "import json\n",
     "import numpy as np\n",
     "import time\n",
@@ -48,7 +49,7 @@
     "# !rm train2017.zip\n",
     "# !rm val2017.zip\n",
     "\n",
-    "###### run code below if nltk hasn't been set up in clound instance yet\n",
+    "##### run code below if nltk hasn't been set up in clound instance yet\n",
     "# !python -m nltk.downloader -d /usr/local/share/nltk_data all\n",
     "\n",
     "###### run code below to save pre-trained weights if needed\n",
@@ -72,14 +73,12 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\"\\n# load vocab\\nwith open('vocabulary/idx_to_string.json') as json_file:\\n    idx_to_string_json = json.load(json_file)\\n        \\nidx_to_string = dict()\\nfor key in idx_to_string_json:\\n    idx_to_string[int(key)] = idx_to_string_json[key]\\n    \\nwith open('vocabulary/string_to_index.json') as json_file:\\n    string_to_index = json.load(json_file)\\n\""
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 591753 captions in the data set\n",
+      "With FREQ_THRESHOLD = 2, vocab size is 16232\n"
+     ]
     }
    ],
    "source": [
@@ -106,7 +105,9 @@
     "val_captions_path = root/'annotations'/'sports_captions_val.json'\n",
     "test_captions_path = root/'annotations'/'sports_captions_test.json'\n",
     "\n",
-    "\"\"\"\n",
+    "#### build vocab using full original coco train\n",
+    "build_vocab()\n",
+    "\n",
     "# load vocab\n",
     "with open('vocabulary/idx_to_string.json') as json_file:\n",
     "    idx_to_string_json = json.load(json_file)\n",
@@ -116,13 +117,12 @@
     "    idx_to_string[int(key)] = idx_to_string_json[key]\n",
     "    \n",
     "with open('vocabulary/string_to_index.json') as json_file:\n",
-    "    string_to_index = json.load(json_file)\n",
-    "\"\"\""
+    "    string_to_index = json.load(json_file)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "ab72e6eb",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "8143132d",
    "metadata": {},
    "outputs": [],
@@ -144,10 +144,10 @@
     "    'captions_path': train_captions_path,\n",
     "    'freq_threshold': 5,\n",
     "    'sequence_length': 20,\n",
-    "    'caps_per_img': 2,\n",
+    "    'caps_per_img': 3,\n",
     "    'stage': \"train\",\n",
-    "    'idx_to_string': None,\n",
-    "    'string_to_index': None,\n",
+    "    'idx_to_string': idx_to_string,\n",
+    "    'string_to_index': string_to_index,\n",
     "}\n",
     "\n",
     "val_interface_params = {\n",
@@ -155,10 +155,10 @@
     "    'captions_path': val_captions_path,\n",
     "    'freq_threshold': 5,\n",
     "    'sequence_length': 20,\n",
-    "    'caps_per_img': 2,\n",
+    "    'caps_per_img': 3,\n",
     "    'stage': \"validation\",\n",
-    "    'idx_to_string': None,\n",
-    "    'string_to_index': None,\n",
+    "    'idx_to_string': idx_to_string,\n",
+    "    'string_to_index': string_to_index,\n",
     "}\n",
     "\n",
     "test_interface_params = {\n",
@@ -166,10 +166,10 @@
     "    'captions_path': test_captions_path,\n",
     "    'freq_threshold': 5,\n",
     "    'sequence_length': 20,\n",
-    "    'caps_per_img': 2,\n",
+    "    'caps_per_img': 3,\n",
     "    'stage': \"test\",\n",
-    "    'idx_to_string': None,\n",
-    "    'string_to_index': None,\n",
+    "    'idx_to_string': idx_to_string,\n",
+    "    'string_to_index': string_to_index,\n",
     "}\n",
     "\n",
     "\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "f38c73a0",
    "metadata": {},
    "outputs": [
@@ -193,8 +193,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lenght of training image: 30000, Lenght of Validation image: 6000 Lenght of Testing image: 9904\n",
-      "Lenght of vocabulary: 4105\n"
+      "Lenght of training image: 45000, Lenght of Validation image: 9000 Lenght of Testing image: 14856\n",
+      "Lenght of vocabulary: 16232\n"
      ]
     }
    ],
@@ -207,12 +207,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "8237cb08",
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 64\n",
+    "batch_size = 32\n",
     "train_loader = data.DataLoader(coco_interface_train, batch_size=batch_size, shuffle=True)\n",
     "val_loader = data.DataLoader(coco_interface_val, batch_size=batch_size, shuffle=False)\n",
     "test_loader = data.DataLoader(coco_interface_test, batch_size=batch_size, shuffle=False)"
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "46e041f3",
    "metadata": {},
    "outputs": [],
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "7fc0b62d",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "8f6a4973",
    "metadata": {},
    "outputs": [],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "14c8e3e8",
    "metadata": {},
    "outputs": [],
@@ -322,12 +322,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "id": "de69f6e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./model/image_captioning_model_v3.pth file does not exist, training startging from scratch\n"
+     ]
+    }
+   ],
    "source": [
-    "CHECKPOINT = './model/image_captioning_model_v2.pth'\n",
+    "CHECKPOINT = './model/image_captioning_model_v3.pth'\n",
     "if Path(CHECKPOINT).exists():\n",
     "    encoder, decoder, training_loss, validation_loss = load_model(encoder, decoder, CHECKPOINT)\n",
     "else:\n",
@@ -336,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "67994682",
    "metadata": {},
    "outputs": [],
@@ -420,17 +428,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training:  0   4.109623432159424\n",
-      "Training:  100   4.257630825042725\n",
-      "Training:  200   4.3339409828186035\n",
-      "Training:  300   4.287081718444824\n",
-      "Training:  400   4.227653980255127\n",
-      "Validation:  0   5.282161712646484\n",
-      "Epoch: 0. Training Loss = 4.2691, Training Perplexity: 71.4599. Validation Loss: 5.5728, Validation Perplexity: 263.1811. Time: 13.153914\n",
-      "Training:  0   4.2040581703186035\n",
-      "Training:  100   4.230066299438477\n",
-      "Training:  200   4.175968170166016\n",
-      "Training:  300   4.188327312469482\n"
+      "Training:  0   9.780360221862793\n",
+      "Training:  100   8.812053680419922\n",
+      "Training:  200   7.828453063964844\n",
+      "Training:  300   7.070606708526611\n",
+      "Training:  400   6.662458896636963\n",
+      "Training:  500   5.92207145690918\n",
+      "Training:  600   5.640048027038574\n",
+      "Training:  700   5.419508457183838\n",
+      "Training:  800   5.57489013671875\n",
+      "Training:  900   5.2863593101501465\n",
+      "Training:  1000   5.230559349060059\n",
+      "Training:  1100   5.061737537384033\n",
+      "Training:  1200   5.135745048522949\n",
+      "Training:  1300   4.982072353363037\n",
+      "Training:  1400   4.999497890472412\n",
+      "Validation:  0   4.945138454437256\n",
+      "Validation:  100   4.837239742279053\n",
+      "Validation:  200   5.098599433898926\n",
+      "Epoch: 0. Training Loss = 6.1211, Training Perplexity: 455.3582. Validation Loss: 4.9190, Validation Perplexity: 136.8627. Time: 21.296185\n",
+      "Training:  0   5.023287773132324\n",
+      "Training:  100   4.998936176300049\n",
+      "Training:  200   4.759758472442627\n",
+      "Training:  300   5.09684944152832\n",
+      "Training:  400   4.711927890777588\n",
+      "Training:  500   4.880420207977295\n",
+      "Training:  600   4.4863739013671875\n",
+      "Training:  700   4.708190441131592\n",
+      "Training:  800   4.703303337097168\n",
+      "Training:  900   4.671431064605713\n",
+      "Training:  1000   4.547339916229248\n",
+      "Training:  1100   4.938860893249512\n",
+      "Training:  1200   4.578774929046631\n",
+      "Training:  1300   4.356436252593994\n",
+      "Training:  1400   4.761893272399902\n",
+      "Validation:  0   4.592445373535156\n",
+      "Validation:  100   4.509326934814453\n",
+      "Validation:  200   4.818741798400879\n",
+      "Epoch: 1. Training Loss = 4.7378, Training Perplexity: 114.1852. Validation Loss: 4.5971, Validation Perplexity: 99.1996. Time: 42.154522\n",
+      "Training:  0   4.48095178604126\n",
+      "Training:  100   4.399701118469238\n",
+      "Training:  200   4.280580997467041\n"
      ]
     }
    ],
