added ability to use multiple json files to build vocab

--- a/Model Training.ipynb
+++ b/Model Training.ipynb
@@ -76,6 +76,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "train dataset has 15000 images\n",
+      " val dataset has 3000 images\n",
+      " test dataset has 938 images\n",
       "There are 591753 captions in the data set\n",
       "With FREQ_THRESHOLD = 2, vocab size is 16232\n"
      ]
@@ -101,12 +104,16 @@
     "imgs_path = root/'images'/'train2017'\n",
     "imgs_path_test = root/'images'/'val2017'\n",
     "\n",
+    "prepare_datasets(train_percent = 0.87, super_categories=['sports'],\n",
+    "                    max_train=15000, max_val=3000, max_test=3000)\n",
+    "\n",
     "train_captions_path = root/'annotations'/'sports_captions_train.json'\n",
     "val_captions_path = root/'annotations'/'sports_captions_val.json'\n",
     "test_captions_path = root/'annotations'/'sports_captions_test.json'\n",
     "\n",
     "#### build vocab using full original coco train\n",
-    "build_vocab()\n",
+    "build_vocab(freq_threshold=2, sequence_length=40, captions_file=['sports_captions_train.json',\n",
+    "                                                                 'sports_captions_val.json')\n",
     "\n",
     "# load vocab\n",
     "with open('vocabulary/idx_to_string.json') as json_file:\n",
@@ -122,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "ab72e6eb",
    "metadata": {},
    "outputs": [],
@@ -134,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "8143132d",
    "metadata": {},
    "outputs": [],
@@ -185,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "f38c73a0",
    "metadata": {},
    "outputs": [
@@ -193,7 +200,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Lenght of training image: 45000, Lenght of Validation image: 9000 Lenght of Testing image: 14856\n",
+      "Lenght of training image: 45000, Lenght of Validation image: 9000 Lenght of Testing image: 2814\n",
       "Lenght of vocabulary: 16232\n"
      ]
     }
@@ -207,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "8237cb08",
    "metadata": {},
    "outputs": [],
@@ -228,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "46e041f3",
    "metadata": {},
    "outputs": [],
@@ -249,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "7fc0b62d",
    "metadata": {},
    "outputs": [
@@ -269,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "8f6a4973",
    "metadata": {},
    "outputs": [],
@@ -295,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "14c8e3e8",
    "metadata": {},
    "outputs": [],
@@ -322,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "de69f6e6",
    "metadata": {},
    "outputs": [
@@ -330,12 +337,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./model/image_captioning_model_v3.pth file does not exist, training startging from scratch\n"
+      "./model/image_captioning_model_v4.pth file does not exist, training startging from scratch\n"
      ]
     }
    ],
    "source": [
-    "CHECKPOINT = './model/image_captioning_model_v3.pth'\n",
+    "CHECKPOINT = './model/image_captioning_model_v4.pth'\n",
     "if Path(CHECKPOINT).exists():\n",
     "    encoder, decoder, training_loss, validation_loss = load_model(encoder, decoder, CHECKPOINT)\n",
     "else:\n",
@@ -344,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "67994682",
    "metadata": {},
    "outputs": [],
@@ -428,47 +435,144 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training:  0   9.780360221862793\n",
-      "Training:  100   8.812053680419922\n",
-      "Training:  200   7.828453063964844\n",
-      "Training:  300   7.070606708526611\n",
-      "Training:  400   6.662458896636963\n",
-      "Training:  500   5.92207145690918\n",
-      "Training:  600   5.640048027038574\n",
-      "Training:  700   5.419508457183838\n",
-      "Training:  800   5.57489013671875\n",
-      "Training:  900   5.2863593101501465\n",
-      "Training:  1000   5.230559349060059\n",
-      "Training:  1100   5.061737537384033\n",
-      "Training:  1200   5.135745048522949\n",
-      "Training:  1300   4.982072353363037\n",
-      "Training:  1400   4.999497890472412\n",
-      "Validation:  0   4.945138454437256\n",
-      "Validation:  100   4.837239742279053\n",
-      "Validation:  200   5.098599433898926\n",
-      "Epoch: 0. Training Loss = 6.1211, Training Perplexity: 455.3582. Validation Loss: 4.9190, Validation Perplexity: 136.8627. Time: 21.296185\n",
-      "Training:  0   5.023287773132324\n",
-      "Training:  100   4.998936176300049\n",
-      "Training:  200   4.759758472442627\n",
-      "Training:  300   5.09684944152832\n",
-      "Training:  400   4.711927890777588\n",
-      "Training:  500   4.880420207977295\n",
-      "Training:  600   4.4863739013671875\n",
-      "Training:  700   4.708190441131592\n",
-      "Training:  800   4.703303337097168\n",
-      "Training:  900   4.671431064605713\n",
-      "Training:  1000   4.547339916229248\n",
-      "Training:  1100   4.938860893249512\n",
-      "Training:  1200   4.578774929046631\n",
-      "Training:  1300   4.356436252593994\n",
-      "Training:  1400   4.761893272399902\n",
-      "Validation:  0   4.592445373535156\n",
-      "Validation:  100   4.509326934814453\n",
-      "Validation:  200   4.818741798400879\n",
-      "Epoch: 1. Training Loss = 4.7378, Training Perplexity: 114.1852. Validation Loss: 4.5971, Validation Perplexity: 99.1996. Time: 42.154522\n",
-      "Training:  0   4.48095178604126\n",
-      "Training:  100   4.399701118469238\n",
-      "Training:  200   4.280580997467041\n"
+      "Training:  0   9.515953063964844\n",
+      "Training:  100   9.210984230041504\n",
+      "Training:  200   8.009066581726074\n",
+      "Training:  300   6.2172160148620605\n",
+      "Training:  400   5.627791404724121\n",
+      "Training:  500   5.186134338378906\n",
+      "Training:  600   4.789130210876465\n",
+      "Training:  700   4.47951078414917\n",
+      "Training:  800   4.59299898147583\n",
+      "Training:  900   4.52008581161499\n",
+      "Training:  1000   4.329635143280029\n",
+      "Training:  1100   4.214908599853516\n",
+      "Training:  1200   4.064572334289551\n",
+      "Training:  1300   4.279685020446777\n",
+      "Training:  1400   4.430614948272705\n",
+      "Validation:  0   4.184030055999756\n",
+      "Validation:  100   4.056313991546631\n",
+      "Validation:  200   4.125290870666504\n",
+      "Epoch: 0. Training Loss = 5.4922, Training Perplexity: 242.7841. Validation Loss: 4.2283, Validation Perplexity: 68.6030. Time: 19.891358\n",
+      "Training:  0   4.340602874755859\n",
+      "Training:  100   4.150339126586914\n",
+      "Training:  200   4.1194915771484375\n",
+      "Training:  300   4.195537567138672\n",
+      "Training:  400   4.215137004852295\n",
+      "Training:  500   4.233678817749023\n",
+      "Training:  600   3.9670445919036865\n",
+      "Training:  700   3.9944844245910645\n",
+      "Training:  800   4.057607173919678\n",
+      "Training:  900   3.902231454849243\n",
+      "Training:  1000   4.199789047241211\n",
+      "Training:  1100   3.798816442489624\n",
+      "Training:  1200   4.055152893066406\n",
+      "Training:  1300   4.0771050453186035\n",
+      "Training:  1400   3.738969087600708\n",
+      "Validation:  0   3.808748722076416\n",
+      "Validation:  100   3.6798224449157715\n",
+      "Validation:  200   3.7597479820251465\n",
+      "Epoch: 1. Training Loss = 4.0486, Training Perplexity: 57.3164. Validation Loss: 3.8805, Validation Perplexity: 48.4465. Time: 39.861753\n",
+      "Training:  0   3.6249170303344727\n",
+      "Training:  100   4.083412170410156\n",
+      "Training:  200   3.816410779953003\n",
+      "Training:  300   3.575230121612549\n",
+      "Training:  400   3.6545469760894775\n",
+      "Training:  500   3.504828929901123\n",
+      "Training:  600   3.782625198364258\n",
+      "Training:  700   3.947258710861206\n",
+      "Training:  800   3.5093300342559814\n",
+      "Training:  900   3.7277274131774902\n",
+      "Training:  1000   3.860720634460449\n",
+      "Training:  1100   3.7024245262145996\n",
+      "Training:  1200   3.8282036781311035\n",
+      "Training:  1300   3.7178497314453125\n",
+      "Training:  1400   3.694422721862793\n",
+      "Validation:  0   3.5606040954589844\n",
+      "Validation:  100   3.4138944149017334\n",
+      "Validation:  200   3.509812116622925\n",
+      "Epoch: 2. Training Loss = 3.7596, Training Perplexity: 42.9315. Validation Loss: 3.6445, Validation Perplexity: 38.2651. Time: 59.812832\n",
+      "Training:  0   3.6686666011810303\n",
+      "Training:  100   3.728597402572632\n",
+      "Training:  200   3.5417871475219727\n",
+      "Training:  300   3.4234201908111572\n",
+      "Training:  400   3.4313347339630127\n",
+      "Training:  500   3.1673684120178223\n",
+      "Training:  600   3.4916634559631348\n",
+      "Training:  700   3.4469285011291504\n",
+      "Training:  800   3.296787738800049\n",
+      "Training:  900   3.4082930088043213\n",
+      "Training:  1000   3.920438766479492\n",
+      "Training:  1100   3.6550467014312744\n",
+      "Training:  1200   3.2024340629577637\n",
+      "Training:  1300   3.4600753784179688\n",
+      "Training:  1400   3.3787529468536377\n",
+      "Validation:  0   3.3963825702667236\n",
+      "Validation:  100   3.23158860206604\n",
+      "Validation:  200   3.3466243743896484\n",
+      "Epoch: 3. Training Loss = 3.5616, Training Perplexity: 35.2202. Validation Loss: 3.4802, Validation Perplexity: 32.4668. Time: 79.655049\n",
+      "Training:  0   3.562284469604492\n",
+      "Training:  100   3.463280439376831\n",
+      "Training:  200   3.560683488845825\n",
+      "Training:  300   3.1694793701171875\n",
+      "Training:  400   3.446065902709961\n",
+      "Training:  500   3.67322039604187\n",
+      "Training:  600   3.223501205444336\n",
+      "Training:  700   3.380782127380371\n",
+      "Training:  800   3.323033094406128\n",
+      "Training:  900   3.2525110244750977\n",
+      "Training:  1000   3.451152801513672\n",
+      "Training:  1100   3.542400360107422\n",
+      "Training:  1200   3.590986967086792\n",
+      "Training:  1300   3.444225311279297\n",
+      "Training:  1400   3.2147698402404785\n",
+      "Validation:  0   3.2764058113098145\n",
+      "Validation:  100   3.1042380332946777\n",
+      "Validation:  200   3.2260682582855225\n",
+      "Epoch: 4. Training Loss = 3.4185, Training Perplexity: 30.5243. Validation Loss: 3.3595, Validation Perplexity: 28.7752. Time: 99.516010\n",
+      "Training:  0   3.5734245777130127\n",
+      "Training:  100   2.9618566036224365\n",
+      "Training:  200   3.2190635204315186\n",
+      "Training:  300   3.211134433746338\n",
+      "Training:  400   3.4272024631500244\n",
+      "Training:  500   3.387782335281372\n",
+      "Training:  600   3.55112624168396\n",
+      "Training:  700   3.6092967987060547\n",
+      "Training:  800   3.0479583740234375\n",
+      "Training:  900   3.3998594284057617\n",
+      "Training:  1000   3.217118263244629\n",
+      "Training:  1100   3.4625494480133057\n",
+      "Training:  1200   3.0982472896575928\n",
+      "Training:  1300   3.4707417488098145\n",
+      "Training:  1400   3.4284050464630127\n",
+      "Validation:  0   3.187938690185547\n",
+      "Validation:  100   3.007162570953369\n",
+      "Validation:  200   3.137634038925171\n",
+      "Epoch: 5. Training Loss = 3.3107, Training Perplexity: 27.4055. Validation Loss: 3.2661, Validation Perplexity: 26.2099. Time: 119.381997\n",
+      "Training:  0   2.9860379695892334\n",
+      "Training:  100   3.6229820251464844\n",
+      "Training:  200   3.1692800521850586\n",
+      "Training:  300   3.5129778385162354\n",
+      "Training:  400   3.391225814819336\n",
+      "Training:  500   2.940432548522949\n",
+      "Training:  600   3.3392765522003174\n",
+      "Training:  700   2.859853744506836\n",
+      "Training:  800   3.337738275527954\n",
+      "Training:  900   3.0478641986846924\n",
+      "Training:  1000   2.855185031890869\n",
+      "Training:  1100   3.0398800373077393\n",
+      "Training:  1200   3.4518625736236572\n",
+      "Training:  1300   2.9528257846832275\n",
+      "Training:  1400   3.1511077880859375\n",
+      "Validation:  0   3.1143438816070557\n",
+      "Validation:  100   2.9269754886627197\n",
+      "Validation:  200   3.067152976989746\n",
+      "Epoch: 6. Training Loss = 3.2249, Training Perplexity: 25.1509. Validation Loss: 3.1896, Validation Perplexity: 24.2795. Time: 139.250589\n",
+      "Training:  0   3.166330337524414\n",
+      "Training:  100   3.3203272819519043\n",
+      "Training:  200   3.402881383895874\n",
+      "Training:  300   2.976362943649292\n",
+      "Training:  400   3.606471061706543\n"
      ]
     }
    ],
