renamed utils file

--- a/example_dataset_creation.ipynb
+++ b/example_dataset_creation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "2eb6c834-819f-49f6-aae2-caea69ab812d",
    "metadata": {
     "tags": []
@@ -19,7 +19,7 @@
     "\n",
     "from pathlib import Path\n",
     "from DatasetInterface import MSCOCOInterface\n",
-    "from utils import *\n",
+    "from data_prep_utils import *\n",
     "import json\n",
     "import numpy as np\n",
     "import time\n",
@@ -89,6 +89,67 @@
     "imgs_path_test = root/'images'/'val2017'\n",
     "\n",
     "prepare_datasets(train_percent = 0.87, super_categories=None,\n",
+    "                    max_train=4000, max_val=1000, max_test=1000)\n",
+    "\n",
+    "train_captions_path = root/'annotations'/'sports_captions_train.json'\n",
+    "val_captions_path = root/'annotations'/'sports_captions_val.json'\n",
+    "test_captions_path = root/'annotations'/'sports_captions_test.json'\n",
+    "\n",
+    "#### build vocab using full original coco train\n",
+    "build_vocab(freq_threshold=2, sequence_length=40, captions_file=['sports_captions_train.json',\n",
+    "                                                                 'sports_captions_val.json'])\n",
+    "\n",
+    "# load vocab\n",
+    "with open('vocabulary/idx_to_string.json') as json_file:\n",
+    "    idx_to_string_json = json.load(json_file)\n",
+    "        \n",
+    "idx_to_string = dict()\n",
+    "for key in idx_to_string_json:\n",
+    "    idx_to_string[int(key)] = idx_to_string_json[key]\n",
+    "    \n",
+    "with open('vocabulary/string_to_index.json') as json_file:\n",
+    "    string_to_index = json.load(json_file)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "57181da1-8efc-4b62-8e81-b17e0e8d4d0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train dataset has 4000 images\n",
+      " val dataset has 1000 images\n",
+      " test dataset has 938 images\n",
+      "There are 25017 captions in the data set\n",
+      "With FREQ_THRESHOLD = 2, vocab size is 2670\n"
+     ]
+    }
+   ],
+   "source": [
+    "#########\n",
+    "# paths for Khalil\n",
+    "#########\n",
+    "# root = Path('Data')\n",
+    "\n",
+    "#captions_path = root/'annotations'/'captions_train2017.json'\n",
+    "\n",
+    "# train_captions_path = root/'annotations_trainval2017'/'annotations'/'sports_captions_train.json'\n",
+    "# val_captions_path = root/'annotations_trainval2017'/'annotations'/'sports_captions_val.json'\n",
+    "# test_captions_path = root/'annotations_trainval2017'/'annotations'/'sports_captions_test.json'\n",
+    "\n",
+    "#########\n",
+    "# paths for Alex\n",
+    "#########\n",
+    "\n",
+    "root = Path('Datasets/coco')\n",
+    "imgs_path = root/'images'/'train2017'\n",
+    "imgs_path_test = root/'images'/'val2017'\n",
+    "\n",
+    "prepare_datasets(train_percent = 0.87, super_categories=['sports'],\n",
     "                    max_train=4000, max_val=1000, max_test=1000)\n",
     "\n",
     "train_captions_path = root/'annotations'/'sports_captions_train.json'\n",
