--- a/Model Training.ipynb
+++ b/Model Training.ipynb
@@ -572,7 +572,14 @@
       "Training:  100   3.3203272819519043\n",
       "Training:  200   3.402881383895874\n",
       "Training:  300   2.976362943649292\n",
-      "Training:  400   3.606471061706543\n"
+      "Training:  400   3.606471061706543\n",
+      "Training:  500   3.513500213623047\n",
+      "Training:  600   3.123234748840332\n",
+      "Training:  700   3.1571664810180664\n",
+      "Training:  800   2.7893688678741455\n",
+      "Training:  900   3.2186849117279053\n",
+      "Training:  1000   3.424802780151367\n",
+      "Training:  1100   3.1460351943969727\n"
      ]
     }
    ],
