updated utils module name in notebook

--- a/Model Training.ipynb
+++ b/Model Training.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "from pathlib import Path\n",
     "from DatasetInterface import MSCOCOInterface\n",
-    "from utils import *\n",
+    "from data_prep_utils import *\n",
     "import json\n",
     "import numpy as np\n",
     "import time\n",
@@ -579,7 +579,13 @@
       "Training:  800   2.7893688678741455\n",
       "Training:  900   3.2186849117279053\n",
       "Training:  1000   3.424802780151367\n",
-      "Training:  1100   3.1460351943969727\n"
+      "Training:  1100   3.1460351943969727\n",
+      "Training:  1200   3.104172706604004\n",
+      "Training:  1300   3.05460524559021\n",
+      "Training:  1400   3.2455196380615234\n",
+      "Validation:  0   3.0547842979431152\n",
+      "Validation:  100   2.8662567138671875\n",
+      "Validation:  200   3.000877857208252\n"
      ]
     }
    ],
