changed custom dataset fname to "custom" from "sports"

--- a/Model Training.ipynb
+++ b/Model Training.ipynb
@@ -93,9 +93,9 @@
     "\n",
     "#captions_path = root/'annotations'/'captions_train2017.json'\n",
     "\n",
-    "# train_captions_path = root/'annotations_trainval2017'/'annotations'/'sports_captions_train.json'\n",
-    "# val_captions_path = root/'annotations_trainval2017'/'annotations'/'sports_captions_val.json'\n",
-    "# test_captions_path = root/'annotations_trainval2017'/'annotations'/'sports_captions_test.json'\n",
+    "# train_captions_path = root/'annotations_trainval2017'/'annotations'/'custom_captions_train.json'\n",
+    "# val_captions_path = root/'annotations_trainval2017'/'annotations'/'custom_captions_val.json'\n",
+    "# test_captions_path = root/'annotations_trainval2017'/'annotations'/'custom_captions_test.json'\n",
     "\n",
     "#########\n",
     "# paths for Alex\n",
@@ -105,16 +105,19 @@
     "imgs_path = root/'images'/'train2017'\n",
     "imgs_path_test = root/'images'/'val2017'\n",
     "\n",
+    "\n",
     "prepare_datasets(train_percent = 0.87, super_categories=['sports'],\n",
     "                    max_train=15000, max_val=3000, max_test=3000)\n",
     "\n",
-    "train_captions_path = root/'annotations'/'sports_captions_train.json'\n",
-    "val_captions_path = root/'annotations'/'sports_captions_val.json'\n",
-    "test_captions_path = root/'annotations'/'sports_captions_test.json'\n",
+    "#### build vocab using full original coco train. Uncomment to run\n",
+    "# build_vocab(freq_threshold=2, sequence_length=40,\n",
+    "#             captions_file='captions_train2017.json')\n",
     "\n",
-    "#### build vocab using full original coco train\n",
-    "build_vocab(freq_threshold=2, sequence_length=40, captions_file=['sports_captions_train.json',\n",
-    "                                                                 'sports_captions_val.json')\n",
+    "train_captions_path = root/'annotations'/'custom_captions_train.json'\n",
+    "val_captions_path = root/'annotations'/'custom_captions_val.json'\n",
+    "test_captions_path = root/'annotations'/'custom_captions_test.json'\n",
+    "\n",
+    "\n",
     "\n",
     "# load vocab\n",
     "with open('vocabulary/idx_to_string.json') as json_file:\n",
@@ -152,7 +155,6 @@
     "    'captions_path': train_captions_path,\n",
     "    'freq_threshold': 5,\n",
     "    'sequence_length': 20,\n",
-
     "    'caps_per_img': 3,\n",
     "    'stage': \"train\",\n",
     "    'idx_to_string': idx_to_string,\n",
